# bool8_t

./: .gitignore  CMakeLists.txt  license.md  readme.md
cmake/: Config.cmake.in  Functions.cmake
doc/: CMakeLists.txt  Doxyfile.in  footer.html  mainpage.hpp
examples/: CMakeLists.txt
examples/arduino_example/: arduino_example.ino
examples/main_example/: CMakeLists.txt  main_example.cpp
include/bool8_t/: Config.hpp  Config.hpp.in  bool8_t.hpp
src/bool8_t/: CMakeLists.txt  bool8_t.cpp
